--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
                                             <a href="https://www.figma.com/proto/QYzNLPR0xAtLgx121nxGRn/%EB%A7%88%EC%BC%93%EC%BB%AC%EB%A6%AC-%EA%B8%B0%ED%9A%8D%EC%84%9C?type=design&t=MGV0rer6hqggdZYD-1&scaling=contain&page-id=0%3A1&node-id=1-17&mode=design" target="_blank">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
                                             <a href="https://yunaweb.pe.kr/marketkurly_frontend24/" target="_blank">사이트 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
                                         </div>
+                                        <div class="project_info">
+                                            <p>{ 개발 인원 : 3명 (24.02.01 - 02.28) }</p>
+                                            <p>{ 담당 업무 : 디자인, 프로그램 코딩 }</p>
+                                            <p>{ 제작 : 카테고리, 로그인, 회원가입, 챗봇, 장바구니 담기 팝업 }</p>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="procject_box box2">
@@ -164,6 +169,11 @@
                                         </div>
                                         <div class="icon_go">
                                             <a href="#">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt="" target="_blank"></a>
+                                        </div>
+                                        <div class="project_info">
+                                            <p>{ 개발 인원 : 3명 (23.11.20 - 12.08) }</p>
+                                            <p>{ 담당 업무 : 디자인, 기획 }</p>
+                                            <p>{ 제작 : 메인페이지, 메뉴바, 카테고리, 상세페이지, 브랜드소개 }</p>
                                         </div>
                                     </div>
                                 </div>
@@ -204,6 +214,11 @@
                                             <a href="https://github.com/eeenz/cloneCoding_ETUDE.git" target="_blank">GIT 보러가기<img src="./images/icon/arrow.svg" alt="" ></a>
                                             <a href="#" target="_blank">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
                                             <a href="http://eunz.dothome.co.kr/etude/index.html" target="_blank">사이트 보러가기<img src="./images/icon/arrow.svg" alt="" ></a>
+                                        </div>
+                                        <div class="project_info">
+                                            <p>{ 개발 인원 : 1명 - 개인프로젝트 (23.12.30 - 24.03.10) }</p>
+                                            <p>{ 담당 업무 : 디자인, 기획, 프로그램 코딩 }</p>
+                                            <p>{ 제작 : 메인, 카테고리, 해더, 로그인, 상세페이지 등등 }</p>
                                         </div>
                                     </div>
                                 </div>
@@ -502,7 +517,7 @@
                             <span>* DOM 활용 여러 함수 사용 가능합니다.</span>
                             <span>* 이벤트 핸들링 및 콜백과 관련된 기술 활용 가능합니다.</span>
                             <span>* 배열의 기본적 함수 사용 가능합니다.</span>
-                            <span>* CSS3 다양한 최신 트렌드 디자인과 애니메이션을 구성하여 JAVASCRIPT와 연동할 수 있는 디자인을 제작할 수 있습니다.</span>
+                            <span>* 다양한 최신 트렌드 디자인과 애니메이션을 구성하여 JavaScript와 연동할 수 있는 디자인을 제작할 수 있습니다.</span>
                         </div>
                     </div>
                     <div class="skill_con_javascript_03 display_none">
