--- a/page_07.html
+++ b/page_07.html
@@ -20,14 +20,32 @@
             <a href="#"><img src="./images/icon/arrow_left_bk.svg" alt=""></a>
         </div>
         <div class="title_comment">
-            <h2>필라테스S 화보 속 임현주의 러브미모어 스타일링</h2>
-            <p>촬영은 필라테스S에서 했고 촬영본을 가지고 편집 디자인을 진행했습니다.<br>
+            <h2>3goose down</h2>
+            <p>촬영은 내부 포토가 진행했고 촬영본을 가지고 편집 디자인을 진행했습니다.<br>
                 페이지 디자인은 본인 참여도 100% 작업물입니다.</p>
             <!-- <p>(@lovememore_official)</p> -->
             <p>▼</p>
         </div>
         <div class="lovememore_page">
-            <img src="./images/portfolio/page/imvely_02_01.jpg" alt="">
+            <!-- <img src="./images/portfolio/page/imvely_03_01.jpg" alt=""> -->
+            <video autoplay="" loop="" muted="" width="900" height="1300"><source src="https://velyvely.cdn.btgcorp.net/video/velyvely/201021_3gooselookbook.mp4" type="video/mp4"></video>
+            <img src="./images/portfolio/page/imvely_03_02.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_03.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_04.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_05.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_06.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_07.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_08.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_09.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_10.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_11.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_12.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_13.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_14.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_15.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_16.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_17.jpg" alt="">
+            <img src="./images/portfolio/page/imvely_03_18.jpg" alt="">
         </div>
     </main>
     <script src="./script/main.js"></script>
